refactor: improved StatusController